tests/pass/0078_nested_for_loops.ee
fn main() {
    for let i = 0; i < 3; i = i + 1 {
        for let j = 0; j < 2; j = j + 1 {
            debugPrint(i);
            debugPrint(j);
        }
    }
}
