tests/fail/0044_for_variable_not_visible_after_loop.ee
fn main() {
    for let i = 0; i < 2; i = i + 1 {
        debugPrint(i);
    }

    debugPrint(i);
}
